re PR c/77292 (Spurious warning: logical not is only applied to the left hand side of comparison)

PR c/77292
	* c-common.c (warn_logical_not_parentheses): Don't warn for
	a comparison or a logical operator.

	* c-c++-common/Wlogical-not-parentheses-1.c: New test.

From-SVN: r239833